// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UnpublishedLabel /> renders when not published because author confirmed his account too late 1`] = `
<Fragment>
   
  <OverlayTrigger
    defaultOverlayShown={false}
    overlay={
      <Popover
        bsClass="popover"
        id="publishable-id1-not-accounted-popover"
        placement="right"
        title={
          <strong>
            <FormattedMessage
              id="account-confirmed-too-late"
              values={Object {}}
            />
          </strong>
        }
      >
        <FormattedMessage
          id="account-confirmed-too-late-message"
          values={Object {}}
        />
      </Popover>
    }
    placement="top"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <Label
      bsClass="label"
      bsStyle="danger"
      className="ellipsis d-ib mw-100 mt-5"
    >
      <i
        className="cap cap-delete-2"
      />
       
      <FormattedMessage
        id="not-accounted"
        values={Object {}}
      />
    </Label>
  </OverlayTrigger>
</Fragment>
`;

exports[`<UnpublishedLabel /> renders when not published because author is not confirmed 1`] = `
<Fragment>
   
  <OverlayTrigger
    defaultOverlayShown={false}
    overlay={
      <Popover
        bsClass="popover"
        id="publishable-id1-not-accounted-popover"
        placement="right"
        title={
          <strong>
            <FormattedMessage
              id="account-not-confirmed-in-time"
              values={Object {}}
            />
          </strong>
        }
      >
        <FormattedMessage
          id="account-not-confirmed-in-time-message"
          values={Object {}}
        />
      </Popover>
    }
    placement="top"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <Label
      bsClass="label"
      bsStyle="danger"
      className="ellipsis d-ib mw-100 mt-5"
    >
      <i
        className="cap cap-delete-2"
      />
       
      <FormattedMessage
        id="not-accounted"
        values={Object {}}
      />
    </Label>
  </OverlayTrigger>
</Fragment>
`;

exports[`<UnpublishedLabel /> renders when not published because author must confirm 1`] = `
<Fragment>
   
  <OverlayTrigger
    defaultOverlayShown={false}
    overlay={
      <Popover
        bsClass="popover"
        id="publishable-id1-not-accounted-popover"
        placement="right"
        title={
          <strong>
            <FormattedMessage
              id="account-pending-confirmation"
              values={Object {}}
            />
          </strong>
        }
      >
        <p>
          <FormattedMessage
            id="account-pending-confirmation-message"
            values={
              Object {
                "contentType": "contribution",
                "emailAddress": "unconfirmed-email@gmail.com",
              }
            }
          />
        </p>
      </Popover>
    }
    placement="top"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <Label
      bsClass="label"
      bsStyle="danger"
      className="ellipsis d-ib mw-100 mt-5"
    >
      <i
        className="cap cap-delete-2"
      />
       
      <FormattedMessage
        id="awaiting-publication"
        values={Object {}}
      />
    </Label>
  </OverlayTrigger>
</Fragment>
`;

exports[`<UnpublishedLabel /> renders when published 1`] = `""`;
